CostalCloud/force-app/main/default/objects/Account.object
<CustomObject>
    <fields>
        <fullName>ia_crm__Intacct_Sync_Status__c</fullName>
        <label>Intacct Sync Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ia_crm__Is_Merged__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is used for Intacct merge Account functionality.</inlineHelpText>
        <label>Is Merged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ia_crm__Print_As__c</fullName>
        <label>Print As</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ia_crm__Reporting_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reporting Entity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ia_crm__Intacct_Entity__c.ia_crm__Hidden__c</field>
                <operation>notEqual</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ia_crm__Intacct_Entity__c</referenceTo>
        <relationshipLabel>Accounts (Reporting Entity)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ia_crm__Reseller_Type__c</fullName>
        <description>This field should not be added on the layouts.</description>
        <inlineHelpText>This field is automatically populated by internal functionalities, modifying the value will impact the Reseller flows.</inlineHelpText>
        <label>Reseller Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ia_crm__SFDC_Account_Id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>SFDC Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ia_crm__SalesRep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales rep</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ia_crm__Employees__c.ia_crm__Hidden__c</field>
                <operation>notEqual</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ia_crm__Employees__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ia_crm__Sales_rep__c</fullName>
        <label>Sales rep ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ia_crm__Ship_to_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship to Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Ship to Contact)</relationshipLabel>
        <relationshipName>ShiptoContact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ia_crm__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ia_crm__Sync_With_Intacct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync With Intacct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ia_crm__Synced_With_Intacct_Date__c</fullName>
        <label>Synced With Intacct Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ia_crm__Taxable__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ia_crm__Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Term</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ia_crm__AR_Terms__c.ia_crm__Hidden__c</field>
                <operation>notEqual</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ia_crm__AR_Terms__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ia_crm__Territory_ID__c</fullName>
        <label>Territory ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ia_crm__Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ia_crm__Territory__c.ia_crm__Hidden__c</field>
                <operation>notEqual</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ia_crm__Territory__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Store__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>All_Clients_Stores</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Store__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Reporting_Market__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Client</value>
        </filters>
        <label>All Clients/Stores</label>
    </listViews>
    <listViews>
        <fullName>All_Installers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Service_Territory__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Reporting_Market__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Installer</value>
        </filters>
        <label>All Installers</label>
    </listViews>
    <listViews>
        <fullName>All_Internal_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Reporting_Market__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Internal</value>
        </filters>
        <label>All Internal Accounts</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Clients_Stores_HDS</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Store__c</columns>
        <columns>Region__c</columns>
        <columns>Reporting_Market__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Client</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>HDS</value>
        </filters>
        <label>Clients/Stores HDS</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Clients_Stores_TCS</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Store__c</columns>
        <columns>Region__c</columns>
        <columns>Reporting_Market__c</columns>
        <columns>PARENT_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Client</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>TCS</value>
        </filters>
        <label>Clients/Stores TCS</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Clients_Stores_THD</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Store__c</columns>
        <columns>Client_Market__c</columns>
        <columns>Client_Division__c</columns>
        <columns>Reporting_Market__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Client</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>THD</value>
        </filters>
        <label>Clients/Stores THD</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Clients_Stores</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Store__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Reporting_Market__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Team</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Client</value>
        </filters>
        <label>My Clients/Stores</label>
    </listViews>
    <listViews>
        <fullName>My_Installers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Service_Territory__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Team</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Installer</value>
        </filters>
        <label>My Installers</label>
    </listViews>
    <listViews>
        <fullName>TEST_Records</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>Test</value>
        </filters>
        <filters>
            <field>PC_FIRST_NAME</field>
            <operation>contains</operation>
            <value>Test</value>
        </filters>
        <label>TEST Records</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Client</fullName>
        <active>true</active>
        <label>Client</label>
    </recordTypes>
    <recordTypes>
        <fullName>Installer</fullName>
        <active>true</active>
        <label>Installer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal</fullName>
        <active>true</active>
        <label>Internal</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>If_Status_is_Active_require_TaxID_And_In</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 (RecordType.Id  = &quot;0124x000000dMP6&quot;),
 ISPICKVAL( Status__c , &quot;Active&quot;) ,
 ISNULL(   Tax_ID__c  ))</errorConditionFormula>
        <errorDisplayField>Tax_ID__c</errorDisplayField>
        <errorMessage>When status is changed to Active please enter TAX ID</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_Status_is_Inactive_require_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL( Status__c , &quot;Inactive&quot;) ,
 ISNULL(  Inactivation_Date__c  ))</errorConditionFormula>
        <errorDisplayField>Inactivation_Date__c</errorDisplayField>
        <errorMessage>When status is changed to Inactive please enter date the account became Inactive</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_Status_is_Inactive_require_Notes</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL( Status__c , &quot;Inactive&quot;) ,
 ISNULL( Inactive_Status_Notes__c ))</errorConditionFormula>
        <errorDisplayField>Inactive_Status_Notes__c</errorDisplayField>
        <errorMessage>When status is changed to Inactive please enter a short note</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Onboarding_Date_cannot_be_in_the_past</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISNEW() ,
Onboarding_Date__c   &lt;  TODAY())</errorConditionFormula>
        <errorDisplayField>Onboarding_Date__c</errorDisplayField>
        <errorMessage>The Onboarding Date cannot be older than today.</errorMessage>
    </validationRules>
</CustomObject>