CostalCloud/force-app/main/default/objects/Account/validationRules/If_Status_is_Active_require_TaxID_And_In.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Status_is_Active_require_TaxID_And_In</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 (RecordType.Id  = &quot;0124x000000dMP6&quot;),
 ISPICKVAL( Status__c , &quot;Active&quot;) ,
 ISNULL(   Tax_ID__c  ))</errorConditionFormula>
    <errorDisplayField>Tax_ID__c</errorDisplayField>
    <errorMessage>When status is changed to Active please enter TAX ID</errorMessage>
</ValidationRule>