CostalCloud/force-app/main/default/objects/Account/validationRules/If_Status_is_Inactive_require_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Status_is_Inactive_require_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Status__c , &quot;Inactive&quot;) ,
 ISNULL(  Inactivation_Date__c  ))</errorConditionFormula>
    <errorDisplayField>Inactivation_Date__c</errorDisplayField>
    <errorMessage>When status is changed to Inactive please enter date the account became Inactive</errorMessage>
</ValidationRule>