CostalCloud/force-app/main/default/objects/Account/validationRules/If_Status_is_Inactive_require_Notes.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Status_is_Inactive_require_Notes</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Status__c , &quot;Inactive&quot;) ,
 ISNULL( Inactive_Status_Notes__c ))</errorConditionFormula>
    <errorDisplayField>Inactive_Status_Notes__c</errorDisplayField>
    <errorMessage>When status is changed to Inactive please enter a short note</errorMessage>
</ValidationRule>