CostalCloud/force-app/main/default/objects/Account/validationRules/Onboarding_Date_cannot_be_in_the_past.validationRule-meta.xml
<ValidationRule>
    <fullName>Onboarding_Date_cannot_be_in_the_past</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISNEW() ,
Onboarding_Date__c   &lt;  TODAY())</errorConditionFormula>
    <errorDisplayField>Onboarding_Date__c</errorDisplayField>
    <errorMessage>The Onboarding Date cannot be older than today.</errorMessage>
</ValidationRule>