CostalCloud/force-app/main/default/objects/Account/listViews/All_Installers.listView-meta.xml
<ListView>
    <fullName>All_Installers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Service_Territory__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Reporting_Market__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>ACCOUNT.TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Installer</value>
    </filters>
    <label>All Installers</label>
</ListView>