CostalCloud/force-app/main/default/objects/Account/listViews/Clients_Stores_THD.listView-meta.xml
<ListView>
    <fullName>Clients_Stores_THD</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Store__c</columns>
    <columns>Client_Market__c</columns>
    <columns>Client_Division__c</columns>
    <columns>Reporting_Market__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Client</value>
    </filters>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>THD</value>
    </filters>
    <label>Clients/Stores THD</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>