CostalCloud/force-app/main/default/objects/Account/listViews/My_Clients_Stores.listView-meta.xml
<ListView>
    <fullName>My_Clients_Stores</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Store__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Reporting_Market__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Team</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Client</value>
    </filters>
    <label>My Clients/Stores</label>
</ListView>