CostalCloud/force-app/main/default/objects/Account/listViews/My_Installers.listView-meta.xml
<ListView>
    <fullName>My_Installers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Service_Territory__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Team</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Installer</value>
    </filters>
    <label>My Installers</label>
</ListView>