CostalCloud/force-app/main/default/objects/Account/listViews/TEST_Records.listView-meta.xml
<ListView>
    <fullName>TEST_Records</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>Test</value>
    </filters>
    <filters>
        <field>PC_FIRST_NAME</field>
        <operation>contains</operation>
        <value>Test</value>
    </filters>
    <label>TEST Records</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>